5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_1332.log
== TEST (2019-04-16 08:56:37) 
-- CODE:
from math import *
a = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:28:22) 
-- CODE:
from math import *
a = 5
area = 3//2*3*(5)*0.5
 
print(round(area, 4))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:28:37) 
-- CODE:
from math import *
a = 5
area = 3//2*3*(5)*0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.171506
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:28:55) 
-- CODE:
from math import *
a = 5
area = 3//2*3*(5)**0.5
 
print(round(area, 4))
-- OUTPUT:
6.7082
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:29:03) 
-- CODE:
from math import *
a = 5
area = 3//2*3*(5)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.167458
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.7082
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:29:29) 
-- CODE:
from math import *
a = 5
area = 3/2*3*(5)**0.5
 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:29:37) 
-- CODE:
from math import *
a = 5
area = 3/2*3*(5)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.133366
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:31:54) 
-- CODE:
from math import *
a = 5
area = 3//2*3**(0.5)5**2 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    area = 3//2*3**(0.5)5**2 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:32:16) 
-- CODE:
from math import *
a = 5
area = 3//2*3**(0.5)*5**2 
print(round(area, 4))
-- OUTPUT:
43.3013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:32:25) 
-- CODE:
from math import *
a = 5
area = 3//2*3**(0.5)*5**2 
print(round(area, 4))
-- EXECUTION TIME:
0.159946
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.3013
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:32:42) 
-- CODE:
from math import *
a = 5
area = 3/2*3**(0.5)*5**2 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:32:51) 
-- CODE:
from math import *
a = 5
area = 3/2*3**(0.5)*5**2 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:32:57) 
-- CODE:
from math import *
a = 5
area = 3/2*3**(0.5)*5**2 
print(round(area, 4))
-- EXECUTION TIME:
0.153115
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
